Finished sign out feature
- Generated sign out component
- Created sign out service
- Generated header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-
-<router-outlet></router-outlet>
+<header>
+  <app-header [signedIn$]="signedIn$"></app-header>
+</header>
+<main>
+  <div class="ui container">
+    <router-outlet></router-outlet>
+  </div>
+</main>
