--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,7 @@
-<div class="ui secondary menu">
+
+<div class="ui menu stackable inverted fluid mini borderless  ">
   <div class="ui container">
-    <div class="header item">
+    <div [routerLink]="['/']" class="header item">
       <img
         src="../../../../favicon.ico"
         width="20px"
@@ -9,9 +10,12 @@
       />
       &nbsp; Ng Email
     </div>
-    <a class="active item"><i class="icon home"></i> Home </a>
-    <a class="item"><i class="icon mail"></i> Messages </a>
-    <a class="item"><i class="icon users"></i> Friends </a>
+    <div class="left menu" *ngIf="signedIn$ | async">
+      <a [routerLink]="['/inbox']" routerLinkActive="active blue" class="item"
+        ><i class="icon mail"></i> Inbox
+      </a>
+      <a class="item"><i class="icon users"></i> Friends </a>
+    </div>
     <div class="right menu">
       <div class="item">
         <div class="ui icon input">
@@ -21,7 +25,7 @@
       </div>
       <div class="item">
         <ng-container *ngIf="signedIn$ | async; else login">
-          <button class="mini ui button basic red" [routerLink]="['/signout']">
+          <button class="mini ui button red" [routerLink]="['/signout']">
             Logout
           </button>
         </ng-container>
