--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-header [signedIn$]="signedIn$"></app-header>
 </header>
 <main>
-  <div class="ui container">
+  <!-- <div class="ui container"> -->
     <router-outlet></router-outlet>
-  </div>
+  <!-- </div> -->
 </main>
