--- a/src/app/inbox/components/email-index/email-index.component.html
+++ b/src/app/inbox/components/email-index/email-index.component.html
@@ -1,10 +1,16 @@
-<div class="ui celled animated big very relaxed selection list">
+<div class="ui celled animated big very relaxed list">
   <ng-container *ngFor="let email of emails">
     <div class="item" [routerLink]="[email.id]" routerLinkActive="active">
       <img class="ui avatar image" [src]="email.img" />
       <div class="aligned middle content">
-        <div class="header">{{ email.subject }}</div>
-        <p>{{ email.from }}</p>
+        <div class="header">
+          {{ email.subject | slice: 0:20 }}
+          {{ email.subject.length > 20 ? "..." : "" }}
+        </div>
+        <p>
+          {{ email.from | slice: 0:25 }}
+          {{ email.from.length > 25 ? "..." : "" }}
+        </p>
       </div>
     </div>
   </ng-container>
