--- a/src/app/inbox/components/email-show/email-show.component.html
+++ b/src/app/inbox/components/email-show/email-show.component.html
@@ -1,7 +1,14 @@
-<div class="ui basic tertiary segment red inverted">
-  <p>From: {{ email.from }}</p>
-  <p>To: {{ email.to }}</p>
-  <p>Subject: {{ email.subject }}</p>
+<div class="ui basic tertiary segment blue inverted">
+  <div>
+    <strong>{{ email.subject }}</strong>
+    <app-email-reply [email]="email"></app-email-reply>
+  </div>
+  <div>
+    <b>From:</b> &nbsp; <i>{{ email.from }}</i>
+  </div>
+  <div>
+    <b>To:</b> &nbsp; <i>{{ email.to }}</i>
+  </div>
 </div>
 <div class="ui basic segment email-content">
   <p *ngIf="!markContent; else htmlContent">{{ email.text }}</p>
