--- a/src/app/inbox/components/placeholder/placeholder.component.html
+++ b/src/app/inbox/components/placeholder/placeholder.component.html
@@ -1,5 +1,5 @@
-<div class="ui placeholder tertiary red inverted segment">
-  <div class="ui icon header">
+<div class="ui placeholder tertiary primary  segment">
+  <div class="ui icon header blue">
     <i class="envelope outline icon"></i>
     Select an email to get started
   </div>
